--- a/src/project_state.json
+++ b/src/project_state.json
@@ -4,14 +4,31 @@
   "summary": "New project",
   "architectural_notes": [],
   "known_issues": [
-    "Admin login/authentication still failing after deployment: users receive 'Invalid email or password. Please check your credentials and try again.'"
+    "Admin login/sign-up flow is not working (authentication issue in admin panel)."
   ],
   "isFixRequest": true,
-  "existing_features": [],
+  "existing_features": [
+    {
+      "id": "feature-fix-the-admin-panel-login-ui-so-it-works-with-internet-identity-instead-of-the-current-non-functional-admin-key-flow-when-the-viewer-is-anonymous-show-a-clear-internet-identity-login-sign-up-prompt-after-login-verify-admin-status-via-iscalleradmin-and-either-enter-the-admin-panel-or-show-an-insufficient-permissions-error-state-with-recovery-actions-retry-reset-logout",
+      "title": "Fix the admin panel login UI so it works with Internet Identity instead of the current non-functional Admin Key flow: when the viewer is anonymous, show a clear Internet Identity login/sign-up prompt; after login, verify admin status via `isCallerAdmin()` and either enter the admin panel or show an 'insufficient permissions' error state with recovery actions (retry/reset/logout).",
+      "reqIds": [
+        "REQ-3"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-a-minimal-diagnostics-surface-for-admin-auth-failures-when-admin-verification-fails-backend-error-or-authorization-trap-display-the-parsed-error-message-english-and-provide-a-copyable-error-detail-section-suitable-for-sharing-during-support-debugging",
+      "title": "Add a minimal diagnostics surface for admin auth failures: when admin verification fails (backend error or authorization trap), display the parsed error message (English) and provide a copyable error detail section suitable for sharing during support/debugging.",
+      "reqIds": [
+        "REQ-4"
+      ],
+      "version": 1
+    }
+  ],
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Fix backend admin authentication so that logging in with the configured admin credentials (email: fitting.point.official@gmail.com, password: Farhan@456) successfully grants admin privileges to the current caller and does not incorrectly fail with an invalid-credentials error.",
+      "summary": "Ensure the backend exposes an `isCallerAdmin()` method used by the frontend and that it returns `true` only when the caller has the admin role.",
       "reqIds": [
         "REQ-1"
       ],
@@ -19,14 +36,14 @@
     },
     {
       "id": "AR-2",
-      "summary": "Ensure the admin login UI continues to display the message \"Invalid email or password. Please check your credentials and try again.\" only when the backend indicates invalid credentials, and displays a non-credential-related error message for other backend failures.",
+      "summary": "Implement an admin bootstrapping path so that admin login can succeed on a fresh deployment: if there are no admins yet, the first authenticated (non-anonymous) caller who attempts to access admin functionality is granted the admin role.",
       "reqIds": [
         "REQ-2"
       ],
       "status": "pending"
     }
   ],
-  "projectName": "Fix admin email/password login rejecting valid credentials",
+  "projectName": "Fix broken admin login/sign-up (Internet Identity + admin role bootstrapping)",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
